--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,22 +1,23 @@
 #name of workflow
-name: first
+name: complex
 
 on: push
 
 jobs: 
-    job1: 
-      name: First Job
+    ubuntu: 
       runs-on: ubuntu-latest
       steps: 
-      - name: Job 1
-        uses: actions/checkout@v2
-      - name: Job 2 
-        run: env | sort
-    job2: 
-      name: Second Job
+        - run: date
+    windows: 
       runs-on: windows-latest
       steps: 
-      - name: Job 1
-        uses: actions/checkout@v2
-      - name: Job 2 
-        run: "Get-ChildItem Env: | Sort-Object Name"
+        - run: date
+    macos: 
+      runs-on: macos-latest
+      steps: 
+        - run: date
+    depends: 
+      needs: [ubuntu, windows, macos]
+      runs-on: macos-latest
+      steps: 
+        - run: date
